--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!doctype html>
+<html lang="no">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Min GitHub Page</title>
+    <style>
+      body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; margin:40px; line-height:1.5;}
+      .card{max-width:720px; margin:auto; padding:24px; border:1px solid #ddd; border-radius:16px; box-shadow:0 1px 8px rgba(0,0,0,.06);}
+      h1{margin-top:0}
+      a{color:#0366d6; text-decoration:none}
+    </style>
+  </head>
+  <body>
+    <div class="card">
+      <h1>Hei 👋</h1>
+      <p>Denne siden kjører på <strong>GitHub Pages</strong>.</p>
+      <p>Rediger <code>index.html</code> i repoet ditt for å oppdatere innholdet.</p>
+      <p><a href="https://pages.github.com/">Mer om GitHub Pages</a></p>
+    </div>
+  </body>
+</html>
 
