--- a/index.html
+++ b/index.html
@@ -1,23 +1,63 @@
-<!doctype html>
-<html lang="no">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Min GitHub Page</title>
-    <style>
-      body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; margin:40px; line-height:1.5;}
-      .card{max-width:720px; margin:auto; padding:24px; border:1px solid #ddd; border-radius:16px; box-shadow:0 1px 8px rgba(0,0,0,.06);}
-      h1{margin-top:0}
-      a{color:#0366d6; text-decoration:none}
-    </style>
-  </head>
-  <body>
-    <div class="card">
-      <h1>Hei 👋</h1>
-      <p>Denne siden kjører på <strong>GitHub Pages</strong>.</p>
-      <p>Rediger <code>index.html</code> i repoet ditt for å oppdatere innholdet.</p>
-      <p><a href="https://pages.github.com/">Mer om GitHub Pages</a></p>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Linda Thanh Vo - CV</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Linda Thanh Vo</h1>
+    <p class="subtitle">Registered Audiologist and IT-student</p>
+  </header>
 
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>
+      Smalgangen 3, 0188 Oslo, Norway <br>
+      (+47) 92673216 <br>
+      <a href="mailto:lindav.contact@gmail.com">lindav.contact@gmail.com</a><br>
+      <a href="https://www.linkedin.com/in/linda-vo-4ab482288/" target="_blank">LinkedIn</a>
+    </p>
+  </section>
+
+  <section>
+    <h2>Professional Summary</h2>
+    <p>
+      As an authorized audiologist in Norway, I have gained expertise in fitting and adjusting hearing aids
+      and conducted detailed hearing evaluations and auditory processing tests. After nearly 5 years as an audiologist,
+      I am now studying to become an IT-specialist and hoping one day to get a job in the IT field at a hearing aid company.
+    </p>
+  </section>
+
+  <section>
+    <h2>Skills</h2>
+    <ul>
+      <li>Patient communication and care</li>
+      <li>Hearing aids & hearing tests</li>
+      <li>mySQL, Python, Web Development</li>
+      <li>Languages: Norwegian, English (fluent), Vietnamese (intermediate)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Education</h2>
+    <p><strong>University of South-Eastern Norway</strong> (Aug 2024 – Present)<br>
+    Bachelor’s degree in IT and Information Systems</p>
+
+    <p><strong>NTNU Faculty of Medicine and Health Sciences</strong> (Aug 2016 – Jul 2019)<br>
+    Bachelor’s degree in Audiology</p>
+  </section>
+
+  <section>
+    <h2>Experience</h2>
+    <p><strong>Registered Audiologist | Christiania ØNH, Oslo</strong> (Apr 2024 – Present)</p>
+    <p><strong>Registered Audiologist | Stavanger University Hospital</strong> (Jan 2020 – Feb 2024)</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Linda Thanh Vo</p>
+  </footer>
+</body>
+</html>
