--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linda Thanh Vo - CV</title>
   <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
   <header>
     <h1>Linda Thanh Vo</h1>
-    <p class="subtitle">Registered Audiologist and IT-student</p>
+    <p class="subtitle">Autorisert audiograf & IT-student</p>
   </header>
 
   <section class="contact">
-    <h2>Contact</h2>
+    <h2>Kontaktinfo</h2>
     <p>
       Smalgangen 3, 0188 Oslo, Norway <br>
       (+47) 92673216 <br>
