--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV – Linda Thanh Vo</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/1087/1087446.png">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -103,6 +103,6 @@
 
 <footer>© 2025 Linda Thanh Vo | <a href="https://github.com/lin-codes">GitHub</a></footer>
 
-<script src="/js/script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
