--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="timeline">
   <!-- Stor sirkel -->
   <div class="big-circle">
-    <img src="https://cdn.discordapp.com/attachments/723583349221752843/1419664736513036408/image31.jpg?ex=68d29551&is=68d143d1&hm=dab6d61d2596d9c37db9908b666ea3073f5a80c80aeea20eab278091f8bb1d47" alt="Profilbilde">
+    <img src="images/image31.jpg" alt="Profilbilde">
     <br><br>
     <h1 style="position: relative; top: 10px;">Linda Thanh Vo</h1>
     <br><br><br><br>
